--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">About Me</string>
     <string name="my_name">Yin Yoke Shan</string>
+    <string name="what_is_your_nickname">What is your Nickname?</string>
+    <string name="done">Done</string>
     <string name="my_profile_pic">Profile Picture</string>
     <string name="my_profile_desc">
         \nEducation:
